--- a/nevado-jms/pom.xml
+++ b/nevado-jms/pom.xml
@@ -3,14 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.skyscreamer</groupId>
+        <groupId>org.mitchellobs</groupId>
         <artifactId>nevado</artifactId>
-        <version>1.3.2</version>
+        <version>1.3.2.1</version>
     </parent>
 
-    <groupId>org.skyscreamer</groupId>
+    <groupId>org.mitchellobs</groupId>
     <artifactId>nevado-jms</artifactId>
-    <version>1.3.2</version>
+    <version>1.3.2.1</version>
     <packaging>jar</packaging>
 
     <name>Nevado JMS</name>
