--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
         <version>7</version>
     </parent>
 
-    <groupId>org.skyscreamer</groupId>
+    <groupId>org.mitchellobs</groupId>
     <artifactId>nevado</artifactId>
-    <version>1.3.2</version>
+    <version>1.3.2.1</version>
     <packaging>pom</packaging>
 
     <name>Nevado</name>
