Add shaded nevado project

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
 
     <modules>
         <module>nevado-jms</module>
+        <module>nevado-shaded</module>
     </modules>
 
     <distributionManagement>
